--- a/Convolutional_neural_network.ipynb
+++ b/Convolutional_neural_network.ipynb
@@ -57,7 +57,8 @@
     {
       "cell_type": "code",
       "source": [
-        "tf.__version__"
+        "tf.__version__\n",
+        "#checking version of tensorflow"
       ],
       "metadata": {
         "colab": {
@@ -343,17 +344,6 @@
       ]
     },
     {
-      "cell_type": "code",
-      "source": [
-        "#Training and evaluation will happen simultaneously because this is computer vision"
-      ],
-      "metadata": {
-        "id": "E3uw9e8c_ft7"
-      },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
       "cell_type": "markdown",
       "metadata": {
         "id": "vfrFQACEnc6i"
@@ -401,6 +391,17 @@
     {
       "cell_type": "code",
       "source": [
+        "#Training and evaluation will happen simultaneously because this is computer vision"
+      ],
+      "metadata": {
+        "id": "E3uw9e8c_ft7"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
         "cnn.fit(x = train_set, validation_data = test_set, epoch = 25)\n",
         "#fit trains the ccn on the training set\n",
         "#validation = the set we want to evaluate our CNN (test set)"
@@ -430,11 +431,40 @@
         "test_image = image.load_img('dataset/single_prediction/cat_or_dog_1.jpg', target_size = (64,64))\n",
         "#image has to have the same size we used during training\n",
         "\n",
-        "test_image\n",
-        "#predict method expects 2D array, so we convert the text_image"
+        "test_image = image.img_to_array(test_image)\n",
+        "#predict method expects 2D array, so we convert the text_image\n",
+        "\n",
+        "test_image = np.expand_dims(test_image, axis = 0)\n",
+        "#we need to train in batches even if it's just for a single prediction\n",
+        "#we add an extra dimension corresponding to the batch\n",
+        "#2nd parameter -> *where* we want to add the dimension -> the batch will be the first dimension\n",
+        "\n",
+        "result = cnn.predict(test_image)\n",
+        "#this is our prediction result\n",
+        "\n",
+        "training_set.class_indices\n",
+        "#figuring out what 0 and 1 stands for (dog/cat)\n",
+        "\n",
+        "if result [0][0] == 1 :\n",
+        "  prediction = 'dog'\n",
+        "else :\n",
+        "  prediction = 'cat'\n",
+        "#first [] is getting access to the one and only batch, which has index '0'\n",
+        "#second [] is getting the element inside the batch, the one and only 1st (0th) picture"
       ],
       "metadata": {
         "id": "MU-t-Asw_goY"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "print(prediction)"
+      ],
+      "metadata": {
+        "id": "P9OveOYii_H5"
       },
       "execution_count": null,
       "outputs": []
