--- a/Convolutional_neural_network.ipynb
+++ b/Convolutional_neural_network.ipynb
@@ -439,13 +439,13 @@
         "#we add an extra dimension corresponding to the batch\n",
         "#2nd parameter -> *where* we want to add the dimension -> the batch will be the first dimension\n",
         "\n",
-        "result = cnn.predict(test_image)\n",
+        "result = cnn.predict(test_image/255.0)\n",
         "#this is our prediction result\n",
         "\n",
         "training_set.class_indices\n",
         "#figuring out what 0 and 1 stands for (dog/cat)\n",
         "\n",
-        "if result [0][0] == 1 :\n",
+        "if result [0][0] > 0.5 :\n",
         "  prediction = 'dog'\n",
         "else :\n",
         "  prediction = 'cat'\n",
