--- a/Convolutional_neural_network.ipynb
+++ b/Convolutional_neural_network.ipynb
@@ -402,7 +402,7 @@
     {
       "cell_type": "code",
       "source": [
-        "cnn.fit(x = train_set, validation_data = test_set, epoch = 25)\n",
+        "cnn.fit(x = train_set, validation_data = test_set, epochs = 25)\n",
         "#fit trains the ccn on the training set\n",
         "#validation = the set we want to evaluate our CNN (test set)"
       ],
@@ -442,7 +442,7 @@
         "result = cnn.predict(test_image/255.0)\n",
         "#this is our prediction result\n",
         "\n",
-        "training_set.class_indices\n",
+        "train_set.class_indices\n",
         "#figuring out what 0 and 1 stands for (dog/cat)\n",
         "\n",
         "if result [0][0] > 0.5 :\n",
