--- a/Convolutional_neural_network.ipynb
+++ b/Convolutional_neural_network.ipynb
@@ -119,6 +119,7 @@
       "cell_type": "markdown",
       "source": [
         "Data augmentation is a technique used to increase the diversity of your training set by applying random (but realistic) transformations, such as image rotation. This technique is used to help the model generalize better to new data by exposing it to more variations of the same data.\n",
+        "- Image augmentation, a type of data augmentation, is used for images\n",
         "\n",
         "Data augmentation is applied only on the training set because we want to avoid overfitting. Overfitting occurs when the model learns the training data too well and becomes too specialized to it. This can lead to poor performance on new data. By applying data augmentation only on the training set, we are able to increase the diversity of our training set without introducing any bias into our test set."
       ],
