--- a/Convolutional_neural_network.ipynb
+++ b/Convolutional_neural_network.ipynb
@@ -441,10 +441,10 @@
         "\n",
         "#image we will test our model\n",
         "test_image = image.load_img('dataset/single_prediction/cat_or_dog_1.jpg', target_size = (64,64))\n",
-        "#image has to have the same size we used during training\n",
+        "#The image is resized to 64x64 pixels, the same size as the images used during training\n",
         "\n",
         "test_image = image.img_to_array(test_image)\n",
-        "#predict method expects 2D array, so we convert the text_image\n",
+        "#We convert the text_image to a NumPy array because the predict method expects 2D array\n",
         "\n",
         "test_image = np.expand_dims(test_image, axis = 0)\n",
         "#we need to train in batches even if it's just for a single prediction\n",
@@ -452,10 +452,12 @@
         "#2nd parameter -> *where* we want to add the dimension -> the batch will be the first dimension\n",
         "\n",
         "result = cnn.predict(test_image/255.0)\n",
-        "#this is our prediction result\n",
+        "#this is our prediction result, a 1D array with 2 elements (one for each class).\n",
+        "#The element with the highest value is the predicted class\n",
         "\n",
         "train_set.class_indices\n",
         "#figuring out what 0 and 1 stands for (dog/cat)\n",
+        "#maps the class indices to the class labels\n",
         "\n",
         "if result [0][0] > 0.5 :\n",
         "  prediction = 'dog'\n",
