--- a/Recurrent_neural_network.ipynb
+++ b/Recurrent_neural_network.ipynb
@@ -72,16 +72,14 @@
       ]
     },
     {
-      "cell_type": "code",
+      "cell_type": "markdown",
       "source": [
-        "#We will only train the training_set, the RNN will have no idea what's going on in the test set\n",
-        "#We will introduce RNN to the test set once the training is done"
+        "* We will only train the *training_set*, the RNN will have no idea what's going on in the test set\n",
+        "* We will introduce RNN to the test set once the training is done"
       ],
       "metadata": {
-        "id": "Qpg5cGiTJcPG"
-      },
-      "execution_count": null,
-      "outputs": []
+        "id": "4O_-mGLft5wE"
+      }
     },
     {
       "cell_type": "code",
@@ -111,16 +109,14 @@
       ]
     },
     {
-      "cell_type": "code",
+      "cell_type": "markdown",
       "source": [
-        "#Recap: 2 best ways of feature scaling: Standardization and Normalization\n",
-        "#We use normalization as it's more suit for RNNs (esp if you have Sigmoid functions as the activation function in the output layer)"
+        "* Recap: 2 best ways of feature scaling: Standardization and Normalization\n",
+        "* We use normalization as it's more suit for RNNs (esp if you have Sigmoid functions as the activation function in the output layer)"
       ],
       "metadata": {
-        "id": "brwxT4mOSAXO"
-      },
-      "execution_count": null,
-      "outputs": []
+        "id": "h7S_Hf8cuunJ"
+      }
     },
     {
       "cell_type": "code",
@@ -182,29 +178,30 @@
       ]
     },
     {
-      "cell_type": "code",
-      "source": [
-        "#We create a data sturcture specifying what the RNN will need to remember when predicting the next stock price\n",
-        "#number of timesteps"
-      ],
+      "cell_type": "markdown",
+      "source": [],
       "metadata": {
-        "id": "LZOk7jloVaRO"
-      },
-      "execution_count": null,
-      "outputs": []
+        "id": "7zMtidPCu02C"
+      }
     },
     {
-      "cell_type": "code",
+      "cell_type": "markdown",
+      "source": [],
+      "metadata": {
+        "id": "CgXCsI9dvBcD"
+      }
+    },
+    {
+      "cell_type": "markdown",
       "source": [
-        "#We create a data structure with 60 timesteps and 1 output\n",
-        "  #timesteps - at each time t, the RNN will look at 60 (just enough to learn) stock prices before time t and predict the next output\n",
-        "  #60 timesteps are 60 financial days, since theres 20 financial days in one month, we will look at 3 months"
+        "We create a data sturcture specifying what the RNN will need to remember when predicting the next stock price.\n",
+        "It will have 60 timesteps and 1 output\n",
+        "* timesteps - at each time t, the RNN will look at 60 (just enough to learn) stock prices before time t and predict the next output\n",
+        "* 60 timesteps are 60 financial days, since theres 20 financial days in one month, we will look at 3 months"
       ],
       "metadata": {
-        "id": "ZA6OQGrOiCX7"
-      },
-      "execution_count": null,
-      "outputs": []
+        "id": "nlqeXsZXvC1B"
+      }
     },
     {
       "cell_type": "code",
@@ -295,18 +292,16 @@
       ]
     },
     {
-      "cell_type": "code",
+      "cell_type": "markdown",
       "source": [
-        "#We need to add a new dimension to this structure\n",
-        "  #We add several other indicators too (like volume, close column, etc) through the new dimension\n",
-        "  #Rn we have 1 indicator -> the open stock price\n",
-        "#This makes this compatible with the RNN"
+        "We need to add a new dimension to this structure.\n",
+        "* We add several other indicators too (like volume, close column, etc) through the new dimension\n",
+        "* Currently we have 1 indicator -> the open stock price\n",
+        "* This makes this compatible with the RNN"
       ],
       "metadata": {
-        "id": "Kdky5cf5o-KM"
-      },
-      "execution_count": null,
-      "outputs": []
+        "id": "8TxKJCe-vOWO"
+      }
     },
     {
       "cell_type": "code",
