--- a/Recurrent_neural_network.ipynb
+++ b/Recurrent_neural_network.ipynb
@@ -33,6 +33,15 @@
     },
     {
       "cell_type": "markdown",
+      "source": [
+        "###We will make an LSTM that will capture the trend of Google stock price."
+      ],
+      "metadata": {
+        "id": "Ks56tUPB2JEo"
+      }
+    },
+    {
+      "cell_type": "markdown",
       "metadata": {
         "id": "nxJfRe4bfYVA"
       },
