--- a/Recurrent_neural_network.ipynb
+++ b/Recurrent_neural_network.ipynb
@@ -224,11 +224,14 @@
         "#We populate these 2 entities\n",
         "for i in range (60, 1258) :\n",
         "  #since we're getting 60 previous stock prices, we need to start from the 60th\n",
+        "  #1257 is the last index of our observation (we add 1)\n",
         "\n",
         "  x_train.append(training_set_scaled[i-60:i, 0])\n",
         "  #we take the stock prices from i-60 to i (every 60th, excluding upperbound (ex. 1-59))\n",
+        "  # be only have 1 column in training_set_scaled, so it's the 0th column\n",
+        "\n",
         "  y_train.append(training_set_scaled[i, 0])\n",
-        "  #the output y_train will contain the ith (every 60th)\n",
+        "  #the output y_train will contain the ith day (every 60th financial day)\n",
         "\n",
         "#we make the lists into NumPy arrays again\n",
         "x_train, y_train = np.array(x_train), np.array(y_train)"
