--- a/Recurrent_neural_network.ipynb
+++ b/Recurrent_neural_network.ipynb
@@ -68,7 +68,7 @@
       "metadata": {
         "id": "l3SJS-t5JEjF"
       },
-      "execution_count": null,
+      "execution_count": 2,
       "outputs": []
     },
     {
@@ -306,10 +306,11 @@
     {
       "cell_type": "markdown",
       "source": [
-        "We need to add a new dimension to this structure.\n",
-        "* We add several other indicators too (like volume, close column, etc) through the new dimension\n",
-        "* Currently we have 1 indicator -> the open stock price\n",
-        "* This makes this compatible with the RNN"
+        "We need to add a new dimension to our NumPy array with the reshape function.\n",
+        "* We add several other indicators too (like volume, close column, etc) through the new dimension. Currently we have 1 indicator, which is the open stock price.\n",
+        "* This process makes our result compatible with the RNN.\n",
+        "* We just do this for x_train since it contains the input for the NN\n",
+        "\n"
       ],
       "metadata": {
         "id": "8TxKJCe-vOWO"
@@ -318,9 +319,6 @@
     {
       "cell_type": "code",
       "source": [
-        "#anytime you want to add a dimension in a NumPy array, you use the reshape function\n",
-        "#We just do this for x_train since it contains the input for the NN\n",
-        "\n",
         "x_train = np.reshape(x_train, (x_train.shape[0], x_train.shape[1], 1))\n",
         "  #1st arg -> what we want to reshape\n",
         "  #2nd arg -> new shape\n",
