--- a/Recurrent_neural_network.ipynb
+++ b/Recurrent_neural_network.ipynb
@@ -34,7 +34,9 @@
     {
       "cell_type": "markdown",
       "source": [
-        "###We will make an LSTM that will capture the trend of Google stock price."
+        "###We will make an LSTM that will capture the (downward and upward) trend of Google stock price.\n",
+        "- We train our model on 5 years of Google stock price from the start of 2012 to end of 2016.\n",
+        "- We will then try to predict the first month of 2017."
       ],
       "metadata": {
         "id": "Ks56tUPB2JEo"
