--- a/Recurrent_neural_network.ipynb
+++ b/Recurrent_neural_network.ipynb
@@ -44,6 +44,17 @@
     },
     {
       "cell_type": "markdown",
+      "source": [
+        "###Data we will use\n",
+        "- Google_Stock_Price_Test = stock prices from start of 2012 to end of 2016\n",
+        "- Google_Stock_Price_Train = stock prices from first month of 2017"
+      ],
+      "metadata": {
+        "id": "BN6nsxhPDljj"
+      }
+    },
+    {
+      "cell_type": "markdown",
       "metadata": {
         "id": "nxJfRe4bfYVA"
       },
@@ -85,7 +96,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "* We will only train the *training_set*, the RNN will have no idea what's going on in the test set\n",
+        "* We will only train the *training_set*, the RNN will not touch the test set\n",
         "* We will introduce RNN to the test set once the training is done"
       ],
       "metadata": {
@@ -100,7 +111,7 @@
         "\n",
         "#We make it a NumPy array and select the columns we are interested in\n",
         "training_set = dataset_train.iloc[:,1:2].values\n",
-        " #iloc -> gets the column we want\n",
+        "  #We just chose the open stock price in column 1\n",
         " #we have to do 1:2 not 1 (upperbound excluded), because putting just 1 will make it a vector not an array\n",
         " #.values creates a NumPy array"
       ],
