--- a/Recurrent_neural_network.ipynb
+++ b/Recurrent_neural_network.ipynb
@@ -467,9 +467,10 @@
       "source": [
         "regressor.add(LSTM(units = 50, return_sequences = True, input_shape = (x_train.shape[1], 1)))\n",
         "  #LSTM(3 argments)\n",
-        "    #number of units = # of LSTM cells/neurons (we choose a relevant number)\n",
+        "    #number of units = # of LSTM cells/neurons (we choose a relevant number), this increases dimensionality\n",
         "    #return sequences = true because we're building a *stacked* LSTM which will have several LSTM layers\n",
-        "    #input shape = x_train is 3D, so we include the 2 remaining dimensions. But the first one (observations) is taken by default."
+        "    #input shape = x_train is 3D (observations, timesteps, indicators)\n",
+        "      #But the first one (observations) is taken by default, so we include the 2 remaining dimensions"
       ],
       "metadata": {
         "id": "Q9gq-iul3lP8"
