--- a/Recurrent_neural_network.ipynb
+++ b/Recurrent_neural_network.ipynb
@@ -475,13 +475,17 @@
       "metadata": {
         "id": "Q9gq-iul3lP8"
       },
-      "execution_count": null,
+      "execution_count": 10,
       "outputs": []
     },
     {
       "cell_type": "markdown",
       "source": [
-        "As mentioned earlier, dropout regularization avoids overfitting."
+        "As mentioned earlier, dropout regularization avoids overfitting. It is a technique where randomly selected neurons are ignored during training. They are “dropped out” randomly.\n",
+        "\n",
+        "This means that their contribution to the activation of downstream neurons is temporally removed on the forward pass, and any weight updates are not applied to the neuron on the backward pass.\n",
+        "\n",
+        "As a neural network learns, neuron weights settle into their context within the network. Weights of neurons are tuned for specific features, providing some specialization. Neighboring neurons come to rely on this specialization, which, if taken too far, **can result in a fragile model too specialized for the training data.** This reliance on context for a neuron during training is referred to as complex co-adaptations."
       ],
       "metadata": {
         "id": "_-Tv1UMTv2Os"
@@ -492,12 +496,12 @@
       "source": [
         "regressor.add(Dropout(0.2))\n",
         "  #add the number of neurons you wanna drop/ignore (dropout rate) for regularization\n",
-        "  #We have 20% dropout"
+        "  #We have 20% dropout (a standard number)"
       ],
       "metadata": {
         "id": "MU4ILfIiv1rP"
       },
-      "execution_count": 9,
+      "execution_count": 11,
       "outputs": []
     },
     {
