--- a/Recurrent_neural_network.ipynb
+++ b/Recurrent_neural_network.ipynb
@@ -514,6 +514,15 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "From here, we don't have to specify the input shape of the previous LSTM layer because it's recognized automatically."
+      ],
+      "metadata": {
+        "id": "uxuFoWoG8QUv"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [
         "regressor.add(LSTM(units = 50, return_sequences = True))\n",
@@ -522,7 +531,7 @@
       "metadata": {
         "id": "ZnZjPgF_8SjO"
       },
-      "execution_count": null,
+      "execution_count": 12,
       "outputs": []
     },
     {
@@ -543,7 +552,7 @@
       "metadata": {
         "id": "LJIfgxbX8TBD"
       },
-      "execution_count": null,
+      "execution_count": 13,
       "outputs": []
     },
     {
@@ -559,13 +568,13 @@
       "cell_type": "code",
       "source": [
         "regressor.add(LSTM(units = 50))\n",
-        "#We stop making return_ssequences to true because we dont need any more LSTM layers\n",
+        "#We stop making return_ssequences to true because we dont need any more LSTM layers, so we remove the true statement since default is false\n",
         "regressor.add(Dropout(0.2))"
       ],
       "metadata": {
         "id": "UUY64mIw8TQ9"
       },
-      "execution_count": null,
+      "execution_count": 16,
       "outputs": []
     },
     {
@@ -585,8 +594,18 @@
       "metadata": {
         "id": "uhMh65W6BFwZ"
       },
-      "execution_count": null,
+      "execution_count": 17,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "* For the output layer, we use the Dense class since we're not using an LSTM layer but a classic fully connected layer. We used this for the ANN and CNN too.\n",
+        "* 1 is the # of neurons -> Output should be only one"
+      ],
+      "metadata": {
+        "id": "Li9UJai19V3Z"
+      }
     },
     {
       "cell_type": "markdown",
@@ -598,15 +617,13 @@
       ]
     },
     {
-      "cell_type": "code",
+      "cell_type": "markdown",
       "source": [
-        "#We compile the RNN with a powerful optimizer and a weight loss"
+        "We compile the RNN with a powerful optimizer and a weight loss."
       ],
       "metadata": {
-        "id": "ep5BeBtcCdsd"
-      },
-      "execution_count": null,
-      "outputs": []
+        "id": "6sewM8t29KdS"
+      }
     },
     {
       "cell_type": "code",
