--- a/Recurrent_neural_network.ipynb
+++ b/Recurrent_neural_network.ipynb
@@ -629,13 +629,14 @@
       "cell_type": "code",
       "source": [
         "regressor.compile(optimizer = 'adam', loss = 'mean_squared_error')\n",
-        "  #optimizer = In RNNs, RMSprop optimzier is recommended, but we use 'adam' here since it works better for us\n",
+        "  #optimizer = In RNNs, RMSprop optimzier is recommended (for stochastic gradient descent)\n",
+        "    #But we use 'adam' here since it works better for us (it's always a safe choice, also better through experimentation)\n",
         "  #loss function = not a classifier anymore (so we dont use binary cross entropy) -> we use mean squared error"
       ],
       "metadata": {
         "id": "I9gRgHQSCoEp"
       },
-      "execution_count": null,
+      "execution_count": 18,
       "outputs": []
     },
     {
@@ -644,18 +645,19 @@
         "id": "-mPhwKGkkebi"
       },
       "source": [
-        "### Fitting the RNN to the Training set"
+        "### Fitting the RNN to the Training set\n",
+        "* Connect our training data with RNN - It is this step that the training will happen."
       ]
     },
     {
       "cell_type": "code",
       "source": [
         "regressor.fit(x_train, y_train, epochs = 100, batch_size = 32 )\n",
-        "#fit connects our NN to the training set, then the training will happen over the epochs\n",
+        "#fit connects our NN to the training set, and executes the training over the specified epochs\n",
         "#parameters\n",
-        "  #input of NN (features)\n",
+        "  #input of NN, the features\n",
         "  #comparison data, the ground truth\n",
-        "  # number of epochs (number of iterations)\n",
+        "  #number of epochs (number of iterations)\n",
         "  #batch size"
       ],
       "metadata": {
@@ -665,15 +667,13 @@
       "outputs": []
     },
     {
-      "cell_type": "code",
+      "cell_type": "markdown",
       "source": [
-        "#The final loss is around ~0.15. We added dropout regularisation in order for this rate to not decrease any further, which induces overfitting"
+        "The final loss is around ~0.15. We added dropout regularisation in order for this rate to not decrease any further, which induces overfitting"
       ],
       "metadata": {
-        "id": "ZDh7pyMjIknf"
-      },
-      "execution_count": null,
-      "outputs": []
+        "id": "3TFnBcO9_-bS"
+      }
     },
     {
       "cell_type": "markdown",
